Textarea shows no newlines and multiple white spaces fix

--- a/jsf/src/main/resources/META-INF/resources/jeeslCss/jeeslPrimeFaces.css
+++ b/jsf/src/main/resources/META-INF/resources/jeeslCss/jeeslPrimeFaces.css
@@ -160,7 +160,15 @@ div.timeline-frame {background-color: #f1f1f1; margin-left: -14px; margin-top: -
 .jeeslTree .ui-widget-content {background-color: transparent;}
 .jeeslTree {background-color: #f1f1f1;}
 
-.jeeslPanel * .ui-widget-header .ui-inputfield, .jeeslPanel * .ui-widget-content .ui-inputfield {border: 0;white-space: normal;overflow: hidden;font-weight: normal;width: 85%;text-align: left; padding: 4px 2px;}
+.jeeslPanel * .ui-widget-header .ui-inputfield, .jeeslPanel * .ui-widget-content .ui-inputfield {
+	border: 0;
+	//white-space: normal;
+	overflow: hidden;
+	font-weight: normal;
+	width: 85%;
+	text-align: left;
+	padding: 4px 2px;
+}
 
 /*.ui-selectonemenu > .ui-inputfield {width: 100% !important;}*/
 
